--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -8,9 +8,6 @@
     background-size: cover;
     overflow: visible;
     position: relative;
-    /* display: grid;
-    grid-template-columns: 1fr;
-    place-items: center; */
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -61,7 +58,7 @@
     color: var(--white);
 }
 
-.data-container {
+.info {
     background-color: var(--white);
     width: 70%;
     border-radius: 1rem;
@@ -75,18 +72,18 @@
     justify-content: center;
 }
 
-.data-container p {
+.info p {
     font-weight: 500;
     width: 100%;
 }
 
-.data-container-items {
+.info__data {
     flex: 1;
     margin-left: 1rem;
     position: relative;
 }
 
-.data-container-items:not(:last-child)::after {
+.info__data:not(:last-child)::after {
     content: "";
     width: 1px;
     height: 60%;
@@ -97,7 +94,7 @@
     transform: translateY(-50%);
 }
 
-.data-title {
+.info__title {
     color: var(--dark-gray);
     font-size: 1rem;
     margin-bottom: 1rem;
@@ -112,35 +109,25 @@
     letter-spacing: normal;
 }
 
-/* #map {
-    background-color: aquamarine;
-    height: 70vh;
-    width: 100vw;
-} */
-
-/* .hide {
-    display: none;
-} */
-
 @media only screen and (max-width: 1000px) {
     .header__input::placeholder {
         font-size: 0.5rem;
     }
-    .data-container {
+    .info {
         flex-direction: column;
         justify-content: center;
         align-items: center;
         max-height: min-content;
         padding: 1rem;
     }
-    .data-container-items {
+    .info__data {
         text-align: center;
         padding: 1rem;
     }
-    .data-container-items:not(:last-child)::after {
+    .info__data:not(:last-child)::after {
         display: none;
     }
-    .data-title {
+    .info__title {
         margin-bottom: 2px;
         font-size: 0.8rem;
     }
