Created Interfaces, RootReducer, and IPAddressAPI components with Redux-Toolkit.  Updated Header and LocationMarker components.

--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -109,6 +109,10 @@
     letter-spacing: normal;
 }
 
+.hide {
+    display: none;
+}
+
 @media only screen and (max-width: 1000px) {
     .header__input::placeholder {
         font-size: 0.5rem;
